tests/fixtures/type_checker/error/return_expected_if_then.galaxy
int return_expected_if_then()
{
    if (false) {
    }
    else {
        return 1;
    }
}
